Fixed alignment issue with options for first pane in Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -365,9 +365,9 @@ img.label {
 	margin-left:15px;
 	width:285px;
 	height:22px;
-	z-index:99;
-	margin-left:878px;
-	margin-top:6px;
+	z-index:9999;
+	margin-left:868px;
+	margin-top:-4px;
 	border-radius:5px;
 	/*background-color:#e33258;*/
 	font-family:'Open Sans';
